# mcsi

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
mcsi/: __init__.py  mcsi.cpp
